# wirecap

./: .gitignore  Cargo.toml  README.md  SPEC.md  TODO.md
docs/decisions/: 2026-04-06-section8-code-review.md
docs/review/: track1-api-design.md  track2-error-handling.md  track3-safety-correctness.md  track4-async-performance.md  track5-idiomatic-rust.md  track6-test-coverage.md  track7-dependencies.md  track8-python-reader.md
py/: wcap.py
src/: buggify.rs  capture.rs  error.rs  format.rs  lib.rs  reader.rs  writer.rs
tests/: buggify.rs  integration.rs  property.rs
