[package]
name = "wirecap"
version = "0.2.0"
edition = "2021"

[features]
# Enable probabilistic fault injection via ferro-buggify. Off by default.
# When enabled, `buggify!()` call sites in src/writer.rs and src/reader.rs
# can simulate I/O failures, fsync errors, rename failures, and compression
# errors during tests. Activate with FERRO_BUGGIFY=1 env var at runtime.
buggify = ["dep:ferro-buggify"]

[dependencies]
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"
metrics = "0.24"
getrandom = "0.2"
zstd = "0.13"
ferro-buggify = { git = "https://github.com/leroux/ferro-buggify", optional = true }

[dev-dependencies]
hegeltest = "0.4"
serial_test = "3"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
